Added databse tests

--- a/Lua 101.ipynb
+++ b/Lua 101.ipynb
@@ -32,7 +32,8 @@
     "--[[ Lua is awesome, easy and fast!!!\n",
     "    Use it for all your scripting needs!\n",
     "  ]]\n",
-    "print(\"Hello Moon!\")"
+    "print(\"Hello Moon!\")\n",
+    "require(\"socket\")"
    ]
   },
   {
@@ -376,6 +377,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lua and Postgres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found: 1 log(s)\n",
+      "Hello World\n",
+      "2020-01-03 09:53:38.95511\n"
+     ]
+    }
+   ],
+   "source": [
+    "-- pgmoon ftw\n",
+    "local pgmoon = require(\"pgmoon\")\n",
+    "local pg = pgmoon.new({\n",
+    "  host = \"127.0.0.1\",\n",
+    "  port = \"5432\",\n",
+    "  database = \"pp\",\n",
+    "  user = \"pp\"\n",
+    "})\n",
+    "\n",
+    "assert(pg:connect())\n",
+    "\n",
+    "local res, found = assert(pg:query(\"select * from logs where severity = \" ..\n",
+    "  pg:escape_literal(0)))\n",
+    "\n",
+    "print(\"Found: \" .. found .. \" log(s)\")\n",
+    "\n",
+    "for k,v in ipairs(res) do\n",
+    "    print(v.msg)\n",
+    "    print(v.timestamp)\n",
+    "end"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -393,7 +439,7 @@
    "file_extension": ".lua",
    "mimetype": "text/x-lua",
    "name": "lua",
-   "version": "5.3"
+   "version": "5.1"
   }
  },
  "nbformat": 4,
